@startuml

title ** Robot **

package Builder {
  class Robot{
     - POTENCIA_BASE: 10
     - nroSerie: Integer 
     - traccion: Traccion
     - resistencia: Integer 
     - arma: Arma

     + setters and getters()
  }
  
  abstract class BuilderRobot{
     # robot : Robot 
     + crearNuevoRobot() : void 
     + getRobot(): Robot
     + buildArma(): void  
     + buildTraccion(): void 
  }

  class FabricaDirector{
    - builderRobot : BuilderRobot
    + setBuilderRobot(): void
    + getRobot(): Robot
    + contruirRobot(): void 
  }

  interface Arma{
     + calcularDanio(robot: Robot()) : Integer
  }
  
  class Granada{}
  class RayoLaser{}
  class Espada{}
  
  interface Traccion{
    + deterioroDePropulsion(robot : Robot())
  }

  class Oruga{}
  class RuedaCaucho{}

  class OrugaGranadaBuilder{}
  class OrugaRayoLaserBuilder{}
  class OrugaEspadaBuilder{}
  class RuedaGranadaBuilder{}
  class RuedaRayoLaserBuilder{}
  class RuegaEspadaBuilder{}

  interface sensorTemperatura{
    + getTemperatura()
  }

  class celsiusSensorTemperatura{
    + getTemperatura()
  }
  class farenheitSensorTemperatura{
    + getFarenheitTemperatura()
  }
  class temperaturaAdapter{
    - farenheitSensorTemperatura
    + getTemperatura()
  }
}
'Relaciones

  Robot -r-o BuilderRobot
  BuilderRobot -r-o FabricaDirector

  Robot *-d- Arma
  Arma <|-- Granada
  Arma <|-- RayoLaser
  Arma <|-- Espada
  
  Robot *-l- Traccion
  Traccion <|-- Oruga
  Traccion <|-- RuedaCaucho 

  BuilderRobot <|-- OrugaGranadaBuilder
  BuilderRobot <|-- OrugaRayoLaserBuilder
  BuilderRobot <|-- OrugaEspadaBuilder
  BuilderRobot <|-- RuedaGranadaBuilder
  BuilderRobot <|-- RuedaRayoLaserBuilder
  BuilderRobot <|-- RuegaEspadaBuilder

  Oruga o-- sensorTemperatura

  sensorTemperatura <|-- celsiusSensorTemperatura
  sensorTemperatura <|-- temperaturaAdapter
  temperaturaAdapter o--> farenheitSensorTemperatura

note as N1
  ** Estrategia **
    . Como el planteo no especifica si un robot puede tener 
      un arma o muchas. Asumo que tiene una sola.
    . Aplico el patron de diseño Builder
    . De BuilderRobot voy a tener 6 clases que implementan esta interfaz 
      2 tipos de traccion * 3 tipos de armas, ahi se hacen todas las combinaciones 
      posibles.
    . Para solucionar el tema de los nuevos sensores que leen 
      las temperaturas en Farenheit, aplico el patron de diseño Adapter 
      En donde temperaturaAdapter hago el calculo y el paso de grados Farenheit 
      a grados Celcius, para asi poder mostrar la temperatura del nuevo sensor
end note

note as N2
  ** Estrategia 2 **
   . En caso que haya que asumir que el robot puede tener varias armas
   . El robot pasa a tener un ArrayList de armas y de seis concreteBuilder 
     se tendrian solo 2 por los tipos de traccion.
end note 
@enduml